# finish-mondial-kpis

./: .gitignore  README.md  pyproject.toml
finish_mondial_kpis/: __init__.py  app.py  calculations.py  calculations_and_mappings.py  mappings.py
finish_mondial_kpis/data/: data_inputs.csv  global_parameters.csv
finish_mondial_kpis/data/projects/: arrp.csv  coonoor_mcc.csv  custom.csv  krrp.csv
