[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finish-mondial-kpis"
version = "0.1.0"
description = "Climate Change Mitigation KPI Calculator for FINISH Mondial"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.9.7 || >3.9.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "streamlit>=1.49",
    "sympy>=1.12",
]

[project.optional-dependencies]

[tool.setuptools.packages.find]
where = ["."]
include = ["finish_mondial_kpis*"]

